--- a/www/index.html
+++ b/www/index.html
@@ -34,6 +34,8 @@
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
     <link rel="stylesheet" type="text/css" href="css/index.css">
     <title>ThaliTestApp</title>
+    <style>
+    </style>
 </head>
 <body>
 <div class="app">
@@ -49,11 +51,16 @@
     <div class="buttons">
         <button id="wifi" onclick="setMode('wifi');">WiFi</button>
         <button id="native" class="activemode" onclick="setMode('native');">Native</button><br/>
-        <button onclick="initThali(1);">Init Thali #1</button>
-        <button onclick="initThali(2);">Init Thali #2</button><br/>
-        <button onclick="startThali();">Start Thali</button>
-        <button onclick="stopThali();">Stop Thali</button><br/>
-        <button onclick="addData();">Add data</button>
+        <hr />
+        <button onclick="initThali(1)">Init Thali #1</button>
+        <button onclick="initThali(2)">Init Thali #2</button><br/>
+        <button onclick="startThali()">Start Thali</button>
+        <button onclick="stopThali()">Stop Thali</button><br/>
+        <button onclick="addData()">Add data</button>
+        <hr />
+        <button onclick="testByNumber(1)">Test 1</button>
+        <button onclick="testByNumber(2)">Test 2</button>
+        <button onclick="testByNumber(3)">Test 3</button>
     </div>
 </div>
 <script type="text/javascript" src="cordova.js"></script>
