--- a/www/index.html
+++ b/www/index.html
@@ -53,7 +53,8 @@
         <button onclick="initThali(2);">Init Thali #2</button><br/>
         <button onclick="startThali();">Start Thali</button>
         <button onclick="stopThali();">Stop Thali</button><br/>
-        <button onclick="addData();">Add data</button>
+        <button onclick="addData(false);">Add data</button>
+        <button onclick="addData(true);">Add attachment</button>
     </div>
 </div>
 <script type="text/javascript" src="cordova.js"></script>
