added attachment button

--- a/www/index.html
+++ b/www/index.html
@@ -53,10 +53,13 @@
         <button id="native" class="activemode" onclick="setMode('native');">Native</button><br/>
         <hr />
         <button onclick="initThali(1)">Init Thali #1</button>
-        <button onclick="initThali(2)">Init Thali #2</button><br/>
+        <button onclick="initThali(2)">Init Thali #2</button>
+        <hr />
         <button onclick="startThali()">Start Thali</button>
-        <button onclick="stopThali()">Stop Thali</button><br/>
+        <button onclick="stopThali()">Stop Thali</button>
+        <hr />
         <button onclick="addData()">Add data</button>
+        <button onclick="addAttachment()">Add attachment</button>
         <hr />
         <button onclick="testByNumber(1)">Test 1</button>
         <button onclick="testByNumber(2)">Test 2</button>
