Added both mode

--- a/www/index.html
+++ b/www/index.html
@@ -48,7 +48,8 @@
     </div>
     <div class="buttons">
         <button id="wifi" onclick="setMode('wifi');">WiFi</button>
-        <button id="native" class="activemode" onclick="setMode('native');">Native</button><br/>
+        <button id="native" onclick="setMode('native');">Native</button>
+        <button id="both" class="activemode" onclick="setMode('both');">Both</button><br/>
         <button id="init1" onclick="initThali(1);">Init #1</button>
         <button id="init2" onclick="initThali(2);">Init #2</button><br/>
         <button id="start" onclick="startThali();">Start</button>
