default mode is both

--- a/www/index.html
+++ b/www/index.html
@@ -48,8 +48,8 @@
     </div>
     <div class="buttons">
         <button id="wifi" onclick="setMode('wifi');">WiFi</button>
-        <button id="native" class="activemode" onclick="setMode('native');">Native</button><br/>
-        <button id="both" onclick="setMode('both');">Both</button>
+        <button id="native" onclick="setMode('native');">Native</button><br/>
+        <button id="both" class="activemode" onclick="setMode('both');">Both</button>
         <hr />
         <button onclick="initThali(1)">Init Thali #1</button>
         <button onclick="initThali(2)">Init Thali #2</button>
