--- a/www/index.html
+++ b/www/index.html
@@ -60,6 +60,8 @@
         <button onclick="addData()">Add data</button>
         <button onclick="addAttachment()">Add attachment</button>
         <hr />
+        <button onclick="startTest()">Start test</button>
+        <hr />
         <button onclick="test('testData')">Test data</button>
         <button onclick="test('testDataToggleWifi')">Test data/toggle wifi</button>
         <button onclick="test('testDataToggleBluetooth')">Test data/toggle bluetooth</button>
