Enqueued actions list

--- a/www/index.html
+++ b/www/index.html
@@ -60,6 +60,10 @@
             <p>Discovered Peers:</p>
             <ul class="peerlist"></ul>
         </div>
+        <div class="thali-box full">
+            <p>Enqueued Actions:</p>
+            <ul class="actionlist"></ul>
+        </div>
     </div>
 
 
