Improve logs, add new test

--- a/www/index.html
+++ b/www/index.html
@@ -90,6 +90,8 @@
         <button onclick="addAttachment()">Add attachment</button>
         <hr />
         <button onclick="startTest()">Start test</button>
+        <button onclick="startTestNoRestart()">Start test (no restarts)</button>
+        <button onclick="stopTests()">Stop tests</button>
         <hr />
         <button onclick="test('testData')">Test data</button>
         <button onclick="test('testDataToggleWifi')">Test data/toggle wifi</button>
