--- a/www/index.html
+++ b/www/index.html
@@ -51,11 +51,11 @@
         <button id="native" onclick="setMode('native');">Native</button><br/>
         <button id="both" class="activemode" onclick="setMode('both');">Both</button>
         <hr />
-        <button onclick="initThali(1)">Init Thali #1</button>
-        <button onclick="initThali(2)">Init Thali #2</button>
+        <button id="init1" onclick="initThali(1)">Init Thali #1</button>
+        <button id="init2" onclick="initThali(2)">Init Thali #2</button>
         <hr />
-        <button onclick="startThali()">Start Thali</button>
-        <button onclick="stopThali()">Stop Thali</button>
+        <button id="start" onclick="startThali()">Start Thali</button>
+        <button id="stop" onclick="stopThali()">Stop Thali</button>
         <hr />
         <button onclick="addData()">Add data</button>
         <button onclick="addAttachment()">Add attachment</button>
