Added “loaded jxcore” info to deviceready element

--- a/www/index.html
+++ b/www/index.html
@@ -41,6 +41,7 @@
     <div id="deviceready" class="blink">
         <p class="event listening">Connecting to Device</p>
         <p class="event received">Device is Ready</p>
+        <p class="event loaded">jxCore is loaded</p>
     </div>
     <div id="changes" class="changes">
         Last change: <span class="lastchange"></span><br/>
