Add possibility to work with 3 devices

--- a/www/index.html
+++ b/www/index.html
@@ -54,6 +54,7 @@
         <hr />
         <button id="init1" onclick="initThali(1)">Init Thali #1</button>
         <button id="init2" onclick="initThali(2)">Init Thali #2</button>
+        <button id="init3" onclick="initThali(3)">Init Thali #3</button>
         <hr />
         <button id="start" onclick="startThali()">Start Thali</button>
         <button id="stop" onclick="stopThali()">Stop Thali</button>
