--- a/www/index.html
+++ b/www/index.html
@@ -60,6 +60,15 @@
         <button id="stop" onclick="stopThali()">Stop Thali</button>
         <hr />
         <button onclick="addData()">Add data</button>
+        <button onclick="addDataInfinitely()">Add data infinitely</button>
+        <select id ="timeoutValue">
+            <option value="100">100</option>
+            <option value="500">500</option>
+            <option value="1000">1000</option>
+            <option value="2000">2000</option>
+            <option value="5000">5000</option>
+        </select>
+        <button onclick="stopAddingData()">Stop adding data infinitely</button>
         <button onclick="addAttachment()">Add attachment</button>
         <hr />
         <button onclick="startTest()">Start test</button>
