Choose peer pool before starting thali, use pouchdb 6.2.0

--- a/www/index.html
+++ b/www/index.html
@@ -48,6 +48,8 @@
         Time received: <span class="changetime"></span>
     </div>
     <div class="buttons">
+        <button id="default" onclick="setPeerPool('default');">Peer Pool Default</button>
+        <button id="oneatatime" onclick="setPeerPool('oneatatime');">Peer Pool OneAtATime</button>
         <button id="wifi" onclick="setMode('wifi');">WiFi</button>
         <button id="native" onclick="setMode('native');">Native</button><br/>
         <button id="both" class="activemode" onclick="setMode('both');">Both</button>
