Add possibility to clean db

--- a/www/index.html
+++ b/www/index.html
@@ -62,6 +62,7 @@
         <button id="stop" onclick="stopThali()">Stop Thali</button>
         <hr />
         <button onclick="addData()">Add data</button>
+        <hr />
         <button onclick="addDataInfinitely()">Add data infinitely</button>
         <select id ="timeoutValue">
             <option value="100">100</option>
@@ -71,6 +72,7 @@
             <option value="5000">5000</option>
         </select>
         <button onclick="stopAddingData()">Stop adding data infinitely</button>
+        <hr />
         <button onclick="addAttachment()">Add attachment</button>
         <hr />
         <button onclick="startTest()">Start test</button>
@@ -79,6 +81,8 @@
         <button onclick="test('testDataToggleWifi')">Test data/toggle wifi</button>
         <button onclick="test('testDataToggleBluetooth')">Test data/toggle bluetooth</button>
         <button onclick="test('testDataToggleBoth')">Test data/toggle both</button>
+        <hr />
+        <button onclick="cleanDB()">Clean DB</button>
     </div>
 </div>
 <script type="text/javascript" src="cordova.js"></script>
