--- a/www/index.html
+++ b/www/index.html
@@ -45,7 +45,10 @@
     </div>
     <div id="changes" class="changes">
         Last change: <span class="lastchange"></span><br/>
-        Time received: <span class="changetime"></span>
+        Time received: <span class="changetime"></span><br/>
+        Sync time: <span class="synctime"></span><br/>
+        Data size: <span class="datasize"></span><br/>
+        Speed: <span class="transferrate"></span>
     </div>
     <div class="buttons">
         <button id="default" onclick="setPeerPool('default');">Peer Pool Default</button>
